// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`personalizedDigestEmail worker properly set showStreak to false if there is no user streak record 1`] = `
Object {
  "identifiers": Object {
    "id": "1",
  },
  "message_data": Object {
    "date": Any<String>,
    "day_name": "Monday",
    "first_name": "Ido",
    "posts": Array [
      Object {
        "post_comments": 5,
        "post_image": "https://daily.dev/image.jpg",
        "post_link": "http://localhost:5002/posts/p1?utm_source=notification&utm_medium=email&utm_campaign=digest",
        "post_read_time": 15,
        "post_summary": "In quis nulla lorem. Suspendisse potenti. Quisque gravida convallis urna, ut venenatis sapien. Maecenas sem odio, blandit vel auctor ut, pellentesque...",
        "post_title": "P1",
        "post_upvotes": 10,
        "post_views": 200,
        "source_image": "http://image.com/a",
        "source_name": "A",
      },
      Object {
        "post_comments": 5,
        "post_image": "https://daily.dev/image.jpg",
        "post_link": "http://localhost:5002/posts/p2?utm_source=notification&utm_medium=email&utm_campaign=digest",
        "post_read_time": 15,
        "post_summary": "In quis nulla lorem. Suspendisse potenti. Quisque gravida convallis urna, ut venenatis sapien. Maecenas sem odio, blandit vel auctor ut, pellentesque...",
        "post_title": "P2",
        "post_upvotes": 10,
        "post_views": 200,
        "source_image": "http://image.com/b",
        "source_name": "B",
      },
      Object {
        "post_comments": 5,
        "post_image": "https://daily.dev/image.jpg",
        "post_link": "http://localhost:5002/posts/p3?utm_source=notification&utm_medium=email&utm_campaign=digest",
        "post_read_time": 15,
        "post_summary": "In quis nulla lorem. Suspendisse potenti. Quisque gravida convallis urna, ut venenatis sapien. Maecenas sem odio, blandit vel auctor ut, pellentesque...",
        "post_title": "P3",
        "post_upvotes": 10,
        "post_views": 200,
        "source_image": "http://image.com/c",
        "source_name": "C",
      },
      Object {
        "post_comments": 5,
        "post_image": "https://daily.dev/image.jpg",
        "post_link": "http://localhost:5002/posts/p4?utm_source=notification&utm_medium=email&utm_campaign=digest",
        "post_read_time": 15,
        "post_summary": "In quis nulla lorem. Suspendisse potenti. Quisque gravida convallis urna, ut venenatis sapien. Maecenas sem odio, blandit vel auctor ut, pellentesque...",
        "post_title": "P4",
        "post_upvotes": 10,
        "post_views": 200,
        "source_image": "http://image.com/a",
        "source_name": "A",
      },
      Object {
        "post_comments": 5,
        "post_image": "https://daily.dev/image.jpg",
        "post_link": "http://localhost:5002/posts/p5?utm_source=notification&utm_medium=email&utm_campaign=digest",
        "post_read_time": 15,
        "post_summary": "In quis nulla lorem. Suspendisse potenti. Quisque gravida convallis urna, ut venenatis sapien. Maecenas sem odio, blandit vel auctor ut, pellentesque...",
        "post_title": "P5",
        "post_upvotes": 10,
        "post_views": 200,
        "source_image": "http://image.com/b",
        "source_name": "B",
      },
    ],
    "preview": "Here are several posts you might like. Each post was carefully selected based on topics you love reading about. Let's get to it!",
    "title": "Ido, your personal update from daily.dev is ready",
    "user": Object {
      "currentStreak": 0,
      "image": "https://daily.dev/ido.jpg",
      "maxStreak": 0,
      "reputation": 10,
      "showStreak": false,
      "username": "idoshamun",
    },
  },
  "queue_draft": false,
  "reply_to": "noreply@daily.dev",
  "send_at": Any<Number>,
  "send_to_unsubscribed": false,
  "to": "ido@daily.dev",
  "tracked": true,
  "transactional_message_id": "48",
}
`;

exports[`personalizedDigestEmail worker should generate personalized digest for user in timezone ahead UTC 1`] = `
Object {
  "identifiers": Object {
    "id": "1",
  },
  "message_data": Object {
    "date": Any<String>,
    "day_name": "Monday",
    "first_name": "Ido",
    "posts": Array [
      Object {
        "post_comments": 5,
        "post_image": "https://daily.dev/image.jpg",
        "post_link": "http://localhost:5002/posts/p1?utm_source=notification&utm_medium=email&utm_campaign=digest",
        "post_read_time": 15,
        "post_summary": "test summary",
        "post_title": "P1",
        "post_upvotes": 10,
        "post_views": 200,
        "source_image": "http://image.com/a",
        "source_name": "A",
      },
      Object {
        "post_comments": 5,
        "post_image": "https://daily.dev/image.jpg",
        "post_link": "http://localhost:5002/posts/p2?utm_source=notification&utm_medium=email&utm_campaign=digest",
        "post_read_time": 15,
        "post_summary": "test summary",
        "post_title": "P2",
        "post_upvotes": 10,
        "post_views": 200,
        "source_image": "http://image.com/b",
        "source_name": "B",
      },
      Object {
        "post_comments": 5,
        "post_image": "https://daily.dev/image.jpg",
        "post_link": "http://localhost:5002/posts/p3?utm_source=notification&utm_medium=email&utm_campaign=digest",
        "post_read_time": 15,
        "post_summary": "test summary",
        "post_title": "P3",
        "post_upvotes": 10,
        "post_views": 200,
        "source_image": "http://image.com/c",
        "source_name": "C",
      },
      Object {
        "post_comments": 5,
        "post_image": "https://daily.dev/image.jpg",
        "post_link": "http://localhost:5002/posts/p4?utm_source=notification&utm_medium=email&utm_campaign=digest",
        "post_read_time": 15,
        "post_summary": "test summary",
        "post_title": "P4",
        "post_upvotes": 10,
        "post_views": 200,
        "source_image": "http://image.com/a",
        "source_name": "A",
      },
      Object {
        "post_comments": 5,
        "post_image": "https://daily.dev/image.jpg",
        "post_link": "http://localhost:5002/posts/p5?utm_source=notification&utm_medium=email&utm_campaign=digest",
        "post_read_time": 15,
        "post_summary": "test summary",
        "post_title": "P5",
        "post_upvotes": 10,
        "post_views": 200,
        "source_image": "http://image.com/b",
        "source_name": "B",
      },
    ],
    "preview": "Here are several posts you might like. Each post was carefully selected based on topics you love reading about. Let's get to it!",
    "title": "Ido, your personal update from daily.dev is ready",
    "user": Object {
      "currentStreak": 0,
      "image": "https://daily.dev/ido.jpg",
      "maxStreak": 0,
      "reputation": 10,
      "showStreak": true,
      "username": "idoshamun",
    },
  },
  "queue_draft": false,
  "reply_to": "noreply@daily.dev",
  "send_at": Any<Number>,
  "send_to_unsubscribed": false,
  "to": "ido@daily.dev",
  "tracked": true,
  "transactional_message_id": "48",
}
`;

exports[`personalizedDigestEmail worker should generate personalized digest for user in timezone ahead UTC 2`] = `
Object {
  "allowed_tags": Array [],
  "blocked_sources": Array [],
  "blocked_tags": Array [],
  "date_from": Any<String>,
  "date_to": Any<String>,
  "feed_config_name": "digest",
  "page_size": 5,
  "source_types": Array [
    "machine",
    "squad",
  ],
  "total_pages": 1,
  "total_posts": 5,
  "user_id": "1",
}
`;

exports[`personalizedDigestEmail worker should generate personalized digest for user in timezone behind UTC 1`] = `
Object {
  "identifiers": Object {
    "id": "1",
  },
  "message_data": Object {
    "date": Any<String>,
    "day_name": "Monday",
    "first_name": "Ido",
    "posts": Array [
      Object {
        "post_comments": 5,
        "post_image": "https://daily.dev/image.jpg",
        "post_link": "http://localhost:5002/posts/p1?utm_source=notification&utm_medium=email&utm_campaign=digest",
        "post_read_time": 15,
        "post_summary": "test summary",
        "post_title": "P1",
        "post_upvotes": 10,
        "post_views": 200,
        "source_image": "http://image.com/a",
        "source_name": "A",
      },
      Object {
        "post_comments": 5,
        "post_image": "https://daily.dev/image.jpg",
        "post_link": "http://localhost:5002/posts/p2?utm_source=notification&utm_medium=email&utm_campaign=digest",
        "post_read_time": 15,
        "post_summary": "test summary",
        "post_title": "P2",
        "post_upvotes": 10,
        "post_views": 200,
        "source_image": "http://image.com/b",
        "source_name": "B",
      },
      Object {
        "post_comments": 5,
        "post_image": "https://daily.dev/image.jpg",
        "post_link": "http://localhost:5002/posts/p3?utm_source=notification&utm_medium=email&utm_campaign=digest",
        "post_read_time": 15,
        "post_summary": "test summary",
        "post_title": "P3",
        "post_upvotes": 10,
        "post_views": 200,
        "source_image": "http://image.com/c",
        "source_name": "C",
      },
      Object {
        "post_comments": 5,
        "post_image": "https://daily.dev/image.jpg",
        "post_link": "http://localhost:5002/posts/p4?utm_source=notification&utm_medium=email&utm_campaign=digest",
        "post_read_time": 15,
        "post_summary": "test summary",
        "post_title": "P4",
        "post_upvotes": 10,
        "post_views": 200,
        "source_image": "http://image.com/a",
        "source_name": "A",
      },
      Object {
        "post_comments": 5,
        "post_image": "https://daily.dev/image.jpg",
        "post_link": "http://localhost:5002/posts/p5?utm_source=notification&utm_medium=email&utm_campaign=digest",
        "post_read_time": 15,
        "post_summary": "test summary",
        "post_title": "P5",
        "post_upvotes": 10,
        "post_views": 200,
        "source_image": "http://image.com/b",
        "source_name": "B",
      },
    ],
    "preview": "Here are several posts you might like. Each post was carefully selected based on topics you love reading about. Let's get to it!",
    "title": "Ido, your personal update from daily.dev is ready",
    "user": Object {
      "currentStreak": 0,
      "image": "https://daily.dev/ido.jpg",
      "maxStreak": 0,
      "reputation": 10,
      "showStreak": true,
      "username": "idoshamun",
    },
  },
  "queue_draft": false,
  "reply_to": "noreply@daily.dev",
  "send_at": Any<Number>,
  "send_to_unsubscribed": false,
  "to": "ido@daily.dev",
  "tracked": true,
  "transactional_message_id": "48",
}
`;

exports[`personalizedDigestEmail worker should generate personalized digest for user in timezone behind UTC 2`] = `
Object {
  "allowed_tags": Array [],
  "blocked_sources": Array [],
  "blocked_tags": Array [],
  "date_from": Any<String>,
  "date_to": Any<String>,
  "feed_config_name": "digest",
  "page_size": 5,
  "source_types": Array [
    "machine",
    "squad",
  ],
  "total_pages": 1,
  "total_posts": 5,
  "user_id": "1",
}
`;

exports[`personalizedDigestEmail worker should generate personalized digest for user with provided config 1`] = `
Object {
  "identifiers": Object {
    "id": "1",
  },
  "message_data": Object {
    "date": Any<String>,
    "day_name": "Monday",
    "first_name": "Ido",
    "posts": Array [
      Object {
        "post_comments": 5,
        "post_image": "https://daily.dev/image.jpg",
        "post_link": "http://localhost:5002/posts/p1?utm_source=notification&utm_medium=email&utm_campaign=digest",
        "post_read_time": 15,
        "post_summary": "test summary",
        "post_title": "P1",
        "post_upvotes": 10,
        "post_views": 200,
        "source_image": "http://image.com/a",
        "source_name": "A",
      },
      Object {
        "post_comments": 5,
        "post_image": "https://daily.dev/image.jpg",
        "post_link": "http://localhost:5002/posts/p2?utm_source=notification&utm_medium=email&utm_campaign=digest",
        "post_read_time": 15,
        "post_summary": "test summary",
        "post_title": "P2",
        "post_upvotes": 10,
        "post_views": 200,
        "source_image": "http://image.com/b",
        "source_name": "B",
      },
      Object {
        "post_comments": 5,
        "post_image": "https://daily.dev/image.jpg",
        "post_link": "http://localhost:5002/posts/p3?utm_source=notification&utm_medium=email&utm_campaign=digest",
        "post_read_time": 15,
        "post_summary": "test summary",
        "post_title": "P3",
        "post_upvotes": 10,
        "post_views": 200,
        "source_image": "http://image.com/c",
        "source_name": "C",
      },
      Object {
        "post_comments": 5,
        "post_image": "https://daily.dev/image.jpg",
        "post_link": "http://localhost:5002/posts/p4?utm_source=notification&utm_medium=email&utm_campaign=digest",
        "post_read_time": 15,
        "post_summary": "test summary",
        "post_title": "P4",
        "post_upvotes": 10,
        "post_views": 200,
        "source_image": "http://image.com/a",
        "source_name": "A",
      },
      Object {
        "post_comments": 5,
        "post_image": "https://daily.dev/image.jpg",
        "post_link": "http://localhost:5002/posts/p5?utm_source=notification&utm_medium=email&utm_campaign=digest",
        "post_read_time": 15,
        "post_summary": "test summary",
        "post_title": "P5",
        "post_upvotes": 10,
        "post_views": 200,
        "source_image": "http://image.com/b",
        "source_name": "B",
      },
    ],
    "preview": "Here are several posts you might like. Each post was carefully selected based on topics you love reading about. Let's get to it!",
    "title": "Ido, your personal update from daily.dev is ready",
    "user": Object {
      "currentStreak": 0,
      "image": "https://daily.dev/ido.jpg",
      "maxStreak": 0,
      "reputation": 10,
      "showStreak": true,
      "username": "idoshamun",
    },
  },
  "queue_draft": false,
  "reply_to": "noreply@daily.dev",
  "send_at": Any<Number>,
  "send_to_unsubscribed": false,
  "to": "ido@daily.dev",
  "tracked": true,
  "transactional_message_id": "d-testtemplateidfromconfig",
}
`;

exports[`personalizedDigestEmail worker should generate personalized digest for user with provided config 2`] = `
Object {
  "allowed_tags": Array [],
  "blocked_sources": Array [],
  "blocked_tags": Array [],
  "date_from": Any<String>,
  "date_to": Any<String>,
  "feed_config_name": "testfeedconfig",
  "page_size": 3,
  "source_types": Array [
    "machine",
    "squad",
  ],
  "total_pages": 1,
  "total_posts": 3,
  "user_id": "1",
}
`;

exports[`personalizedDigestEmail worker should generate personalized digest for user with subscription 1`] = `
Object {
  "identifiers": Object {
    "id": "1",
  },
  "message_data": Object {
    "date": Any<String>,
    "day_name": "Monday",
    "first_name": "Ido",
    "posts": Array [
      Object {
        "post_comments": 5,
        "post_image": "https://daily.dev/image.jpg",
        "post_link": "http://localhost:5002/posts/p1?utm_source=notification&utm_medium=email&utm_campaign=digest",
        "post_read_time": 15,
        "post_summary": "test summary",
        "post_title": "P1",
        "post_upvotes": 10,
        "post_views": 200,
        "source_image": "http://image.com/a",
        "source_name": "A",
      },
      Object {
        "post_comments": 5,
        "post_image": "https://daily.dev/image.jpg",
        "post_link": "http://localhost:5002/posts/p2?utm_source=notification&utm_medium=email&utm_campaign=digest",
        "post_read_time": 15,
        "post_summary": "test summary",
        "post_title": "P2",
        "post_upvotes": 10,
        "post_views": 200,
        "source_image": "http://image.com/b",
        "source_name": "B",
      },
      Object {
        "post_comments": 5,
        "post_image": "https://daily.dev/image.jpg",
        "post_link": "http://localhost:5002/posts/p3?utm_source=notification&utm_medium=email&utm_campaign=digest",
        "post_read_time": 15,
        "post_summary": "test summary",
        "post_title": "P3",
        "post_upvotes": 10,
        "post_views": 200,
        "source_image": "http://image.com/c",
        "source_name": "C",
      },
      Object {
        "post_comments": 5,
        "post_image": "https://daily.dev/image.jpg",
        "post_link": "http://localhost:5002/posts/p4?utm_source=notification&utm_medium=email&utm_campaign=digest",
        "post_read_time": 15,
        "post_summary": "test summary",
        "post_title": "P4",
        "post_upvotes": 10,
        "post_views": 200,
        "source_image": "http://image.com/a",
        "source_name": "A",
      },
      Object {
        "post_comments": 5,
        "post_image": "https://daily.dev/image.jpg",
        "post_link": "http://localhost:5002/posts/p5?utm_source=notification&utm_medium=email&utm_campaign=digest",
        "post_read_time": 15,
        "post_summary": "test summary",
        "post_title": "P5",
        "post_upvotes": 10,
        "post_views": 200,
        "source_image": "http://image.com/b",
        "source_name": "B",
      },
    ],
    "preview": "Here are several posts you might like. Each post was carefully selected based on topics you love reading about. Let's get to it!",
    "title": "Ido, your personal update from daily.dev is ready",
    "user": Object {
      "currentStreak": 0,
      "image": "https://daily.dev/ido.jpg",
      "maxStreak": 0,
      "reputation": 10,
      "showStreak": true,
      "username": "idoshamun",
    },
  },
  "queue_draft": false,
  "reply_to": "noreply@daily.dev",
  "send_at": Any<Number>,
  "send_to_unsubscribed": false,
  "to": "ido@daily.dev",
  "tracked": true,
  "transactional_message_id": "48",
}
`;

exports[`personalizedDigestEmail worker should generate personalized digest for user with subscription 2`] = `
Object {
  "allowed_tags": Array [],
  "blocked_sources": Array [],
  "blocked_tags": Array [],
  "date_from": Any<String>,
  "date_to": Any<String>,
  "feed_config_name": "digest",
  "page_size": 5,
  "source_types": Array [
    "machine",
    "squad",
  ],
  "total_pages": 1,
  "total_posts": 5,
  "user_id": "1",
}
`;

exports[`personalizedDigestEmail worker should truncate long posts summary 1`] = `
Object {
  "identifiers": Object {
    "id": "1",
  },
  "message_data": Object {
    "date": Any<String>,
    "day_name": "Monday",
    "first_name": "Ido",
    "posts": Array [
      Object {
        "post_comments": 5,
        "post_image": "https://daily.dev/image.jpg",
        "post_link": "http://localhost:5002/posts/p1?utm_source=notification&utm_medium=email&utm_campaign=digest",
        "post_read_time": 15,
        "post_summary": "In quis nulla lorem. Suspendisse potenti. Quisque gravida convallis urna, ut venenatis sapien. Maecenas sem odio, blandit vel auctor ut, pellentesque...",
        "post_title": "P1",
        "post_upvotes": 10,
        "post_views": 200,
        "source_image": "http://image.com/a",
        "source_name": "A",
      },
      Object {
        "post_comments": 5,
        "post_image": "https://daily.dev/image.jpg",
        "post_link": "http://localhost:5002/posts/p2?utm_source=notification&utm_medium=email&utm_campaign=digest",
        "post_read_time": 15,
        "post_summary": "In quis nulla lorem. Suspendisse potenti. Quisque gravida convallis urna, ut venenatis sapien. Maecenas sem odio, blandit vel auctor ut, pellentesque...",
        "post_title": "P2",
        "post_upvotes": 10,
        "post_views": 200,
        "source_image": "http://image.com/b",
        "source_name": "B",
      },
      Object {
        "post_comments": 5,
        "post_image": "https://daily.dev/image.jpg",
        "post_link": "http://localhost:5002/posts/p3?utm_source=notification&utm_medium=email&utm_campaign=digest",
        "post_read_time": 15,
        "post_summary": "In quis nulla lorem. Suspendisse potenti. Quisque gravida convallis urna, ut venenatis sapien. Maecenas sem odio, blandit vel auctor ut, pellentesque...",
        "post_title": "P3",
        "post_upvotes": 10,
        "post_views": 200,
        "source_image": "http://image.com/c",
        "source_name": "C",
      },
      Object {
        "post_comments": 5,
        "post_image": "https://daily.dev/image.jpg",
        "post_link": "http://localhost:5002/posts/p4?utm_source=notification&utm_medium=email&utm_campaign=digest",
        "post_read_time": 15,
        "post_summary": "In quis nulla lorem. Suspendisse potenti. Quisque gravida convallis urna, ut venenatis sapien. Maecenas sem odio, blandit vel auctor ut, pellentesque...",
        "post_title": "P4",
        "post_upvotes": 10,
        "post_views": 200,
        "source_image": "http://image.com/a",
        "source_name": "A",
      },
      Object {
        "post_comments": 5,
        "post_image": "https://daily.dev/image.jpg",
        "post_link": "http://localhost:5002/posts/p5?utm_source=notification&utm_medium=email&utm_campaign=digest",
        "post_read_time": 15,
        "post_summary": "In quis nulla lorem. Suspendisse potenti. Quisque gravida convallis urna, ut venenatis sapien. Maecenas sem odio, blandit vel auctor ut, pellentesque...",
        "post_title": "P5",
        "post_upvotes": 10,
        "post_views": 200,
        "source_image": "http://image.com/b",
        "source_name": "B",
      },
    ],
    "preview": "Here are several posts you might like. Each post was carefully selected based on topics you love reading about. Let's get to it!",
    "title": "Ido, your personal update from daily.dev is ready",
    "user": Object {
      "currentStreak": 0,
      "image": "https://daily.dev/ido.jpg",
      "maxStreak": 0,
      "reputation": 10,
      "showStreak": true,
      "username": "idoshamun",
    },
  },
  "queue_draft": false,
  "reply_to": "noreply@daily.dev",
  "send_at": Any<Number>,
  "send_to_unsubscribed": false,
  "to": "ido@daily.dev",
  "tracked": true,
  "transactional_message_id": "48",
}
`;
